--- a/css/styles.css
+++ b/css/styles.css
@@ -173,22 +173,14 @@ footer {
     display: none;
 }
 
-@media screen and (max-width: 1px) {
-
-  .phone {
-    display: block;
-  }
-  .desktop {
-    display: none;
-  }
-}
-
 .mobile-text {
   font-size: 30px;
   font-weight: 400;
   padding: 10%;
   font-family: "Poppins", sans-serif;
 }
+
+
 
 .home-text {
   margin: auto;
@@ -232,6 +224,9 @@ footer {
   line-height: 1.5;
   font-family: 'Poppins', sans-serif;
 }
+
+
+
 .image{
   margin:auto;
   width:50%;
@@ -270,9 +265,10 @@ footer {
   width: 50%;
   padding-bottom: 75px;
 }
+
 #work-scroll-text {
   text-align: center;
-  font-size: 25px;
+  font-size: 20px;
   font-family: 'Poppins', sans-serif;
 }
 
@@ -351,25 +347,15 @@ footer {
   font-family: 'Poppins', sans-serif;
 }
 
-.wordrive {
-  display: flex;
-}
-
 .square-img {
   flex: 50%;
   text-align: center;
 }
-.wordrive-text {
-  flex: 50%;
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 
-}
 .uiexp {
   width: 65%;
+  margin-top: 20px;
+  padding-top: 10%;
   height: auto;
   margin: auto;
 
@@ -386,30 +372,15 @@ footer {
 .wordrive-button:hover {
   background-color: #8458FE;
 }
-.zoom {
-  display: flex;
-  align-items: center;
-}
 
-.zoom-img {
-  width:50%;
-  text-align: center;
-  padding-right: 35px;
-}
-.zoom-text {
+.text {
   width:50%;
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.uiexp2 {
-  width: 75%;
-  min-width: 250px;
-  height: auto;
-  margin: auto;
 
-}
 .zoom-button {
   background-color: #A4DDFC;
   color: white;
@@ -422,27 +393,11 @@ footer {
 .zoom-button:hover {
   background-color: #60C8FF;
 }
-.dxd-img {
-  flex: 50%;
-  text-align: center;
-  margin-left: 20px;
-}
-.dxd-text {
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.uiexp3 {
-  width: 57%;
-  min-width: 250px;
-  height: auto;
-  margin: auto;
-}
+
 #dxd {
   padding-top: 20px;
 }
+
 .dxd-button {
   background-color: #D9D1D9;
   color: white;
@@ -452,27 +407,10 @@ footer {
   max-width: 150px;
 }
 
-.ethics-img {
-  flex: 50%;
-  text-align: center;
-  margin-left: 20px;
-}
-.ethics-text {
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.uiexp4 {
-  width: 57%;
-  min-width: 250px;
-  height: auto;
-  margin: auto;
-}
 #ethics {
   padding-top: 20px;
 }
+
 .ethics-button {
   background-color: #D1E0A4;
   color: white;
@@ -485,24 +423,6 @@ footer {
   background-color: #59CAA1;
 }
 
-.sleep-img {
-  flex: 50%;
-  text-align: center;
-  margin-left: 20px;
-}
-.sleep-text {
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.uiexp5 {
-  width: 67%;
-  min-width: 250px;
-  height: auto;
-  margin: auto;
-}
 #sleep {
   padding-top: 20px;
 }
@@ -519,20 +439,10 @@ footer {
   background-color: #9175CF;
 }
 
-.dormit-text {
-  width: 50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.dormit-img {
-  width: 50%;
-  text-align: center;
-}
 .visexp1 {
-  width: 65%;
+  width: 75%;
   height: auto;
+  padding-top: 10%
 
 }
 .dormit-button {
@@ -547,30 +457,7 @@ footer {
 .dormit-button:hover {
   background-color: #8458FE;
 }
-.aisc {
-  display: flex;
-  align-items: center;
-}
 
-.aisc-img {
-  width:50%;
-  text-align: center;
-  padding-right: 40px;
-}
-.aisc-text {
-  width:50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.visexp2 {
-  width: 60%;
-  min-width: 250px;
-  height: auto;
-  margin: auto;
-
-}
 .aisc-button {
   background-color: #F9ACD4;
   color: white;
@@ -584,6 +471,7 @@ footer {
   background-color: #F470BA;
 }
 
+
 #clickable:hover {
   transform:scale(1.1,1.1);
   -webkit-transform:scale(1.1,1.1);
@@ -591,29 +479,6 @@ footer {
   transition: .3s;
 }
 
-.sacf {
-  display: flex;
-  align-items: center;
-}
-
-.sacf-img {
-  width:50%;
-  text-align: center;
-  padding-left: 15px;
-}
-.sacf-text {
-  width:50%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.visexp3 {
-  width: 66%;
-  height: auto;
-  margin: auto;
-
-}
 .sacf-button {
   background-color: #B1CEFF;
   color: white;
@@ -647,6 +512,358 @@ footer {
   grid-template-columns: 40% 25%;
   grid-template-rows: 100% 25%;
   align-content: left;
+}
+
+@media screen and (max-width: 800px) {
+  header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    right: 0;
+    z-index: 10000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #FFFDF9;
+    padding: 1%;
+    transition: .3s;
+    box-shadow: 0px 0px 10px rgb(0 0 0 /10%);
+  }
+  .work-nav:hover {
+    color: #EBA937;
+  }
+  .everyday-nav:hover {
+    color: #ABCDA2;
+  }
+  .about-nav:hover {
+    color: #8CA9E1;
+  }
+  .play-nav:hover {
+    color: #BD295F;
+  }
+
+  .resume-nav:hover {
+    color: #C77492;
+  }
+
+  .logo img{
+    max-width: 100%;
+    width:25px;
+    height: auto;
+    margin-left: 20px;
+  }
+
+  .navbar {
+    display: flex;
+  }
+  .navbar li{
+    position: relative;
+  }
+  .navbar a{
+    font-size: 18px;
+    color: var(--text-color);
+    font-weight: 500;
+    padding: 10px 10.8px;
+    margin-top: 10px;
+    color: #FFFDF9;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+    letter-spacing: .1rem;
+    font-family: 'Poppins', sans-serif;
+  }
+  .navbar a::after{
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background: #EBA937;
+    bottom: -3px;
+    left: 0;
+    transition: ease .40s;
+  }
+
+  .home-text {
+    margin: auto;
+    width:68%;
+    position: relative;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .home-text h1{
+    margin: 20px 0px 0px 20px;
+    font-size: 25px;
+    line-height: 1;
+    font-weight: 300;
+    font-family: 'Taviraj', serif;
+  }
+
+  .home-text h1 span {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .home-text h5{
+    margin: 15px 0px 15px 20px;
+    font-size: 15px;
+    line-height: 1;
+    font-weight: 500;
+    color: #CFC9B7;
+    font-family: 'Poppins', sans-serif;
+    padding-top: 12px;
+  }
+  .home-text h3{
+    margin-bottom: 10px;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    font-family: 'Poppins', sans-serif;
+  }
+  .home-text h4{
+    margin: 0px 0px 0px 10px;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 1.5;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  #work-scroll-text {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .visual-tab:hover ~ #visual-text {
+    fill: #505050;
+  }
+  #visual-text:hover {
+    fill: #505050;
+  }
+
+  .UI-tab:hover ~ #UI-text {
+    fill: #505050;
+  }
+  #UI-text:hover {
+    fill: #505050;
+  }
+  .ui-top {
+    width:80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .vis-top {
+    width:80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .exp-section {
+    background-color: #FFFDF9;
+    transition: .5s background-color;
+    padding-top: 100px;
+    padding-bottom: 50px;
+    vertical-align: middle;
+  }
+  #exp-section>div  {
+    display:none;
+  }
+  #exp-section>div.active {
+    display:block;
+  }
+  #experience {
+    background-color: #F7F2E6;
+    width:80%;
+    margin:auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 0px 0px 50px 50px;
+  }
+  .exp {
+    display: flex;
+    padding-bottom: 40px;
+  }
+
+  .experience-company {
+    font-size: 15px;
+    color: #505050;
+    font-weight: 400;
+    width: 70%;
+    padding-bottom: 10px;
+    font-family: 'Poppins', sans-serif;
+  }
+  .experience-subheading {
+    font-size: 12px;
+    font-weight: 100;
+    color: #878787;
+    width: 70%;
+    padding-bottom: 10px;
+    font-family: 'Taviraj', serif;
+  }
+  .experience-description {
+    font-size: 10px;
+    font-weight: 400;
+    color: #878787;
+    width: 70%;
+    padding-bottom: 25px;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .square-img {
+    flex: 50%;
+    text-align: center;
+  }
+
+  .uiexp {
+    width: 85%;
+    padding: 10%;
+    padding-top: 15px;
+    height: auto;
+    margin: auto;
+
+  }
+  .wordrive-button {
+    background-color: #D4CBF7;
+    color: white;
+    padding: 5px 22px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .wordrive-button:hover {
+    background-color: #8458FE;
+  }
+
+  .text {
+    width:50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .zoom-button {
+    background-color: #A4DDFC;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .zoom-button:hover {
+    background-color: #60C8FF;
+  }
+
+  #dxd {
+    padding-top: 20px;
+  }
+
+  .dxd-button {
+    background-color: #D9D1D9;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  #ethics {
+    padding-top: 20px;
+  }
+
+  .ethics-button {
+    background-color: #D1E0A4;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+  .ethics-button:hover {
+    background-color: #59CAA1;
+  }
+
+  #sleep {
+    padding-top: 20px;
+  }
+  .sleep-button {
+    background-color: #CABBED;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .sleep-button:hover {
+    background-color: #9175CF;
+  }
+
+  .visexp1 {
+    width: 85%;
+    padding: 10%;
+    padding-top: 15px;
+    height: auto;
+
+  }
+  .dormit-button {
+    background-color: #D4CBF7;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .dormit-button:hover {
+    background-color: #8458FE;
+  }
+
+  .aisc-button {
+    background-color: #F9ACD4;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .aisc-button:hover {
+    background-color: #F470BA;
+  }
+
+
+  #clickable:hover {
+    transform:scale(1.1,1.1);
+    -webkit-transform:scale(1.1,1.1);
+    -moz-transform:scale(1.1,1.1);
+    transition: .3s;
+  }
+
+  .sacf-button {
+    background-color: #B1CEFF;
+    color: white;
+    padding: 5px 3px;
+    border: none;
+    border-radius: 10px;
+    max-width: 100px;
+    font-size: 10px;
+  }
+
+  .sacf-button:hover {
+    background-color: #5996FF;
+  }
+
 }
 
 
