--- a/css/styles.css
+++ b/css/styles.css
@@ -179,8 +179,87 @@ footer {
   padding: 10%;
   font-family: "Poppins", sans-serif;
 }
+.home {
+  width: 100%;
+  height: 100%;
+  min-width: 300px;
+  min-height: 300px;
+  text-align: right;
+}
 
+.home-img {
+  position: absolute;
+}
 
+#spoon {
+  bottom: 35%;
+  right: 0%;
+  max-width: 70%;
+  height: auto;
+}
+
+#bag {
+  right: 0%;
+  top:3%;
+  max-width: 25%;
+  height: auto;
+}
+
+#work {
+  left: 5%;
+  top: 23%;
+  max-width: 19%;
+  height: auto;
+}
+
+#about {
+  left: 40%;
+  top: 72%;
+  width: 15%;
+  height: auto;
+}
+
+#everyday {
+  left: 75%;
+  top: 72%;
+  max-width: 19%;
+  height: auto;
+}
+
+#playp {
+  left: 60%;
+  top: 2%;
+  max-width: 19%;
+  height: auto;
+}
+
+#orange {
+  left: 70%;
+  top: 40%;
+  max-width: 13%;
+  height: auto;
+}
+
+#egg {
+  left: 22%;
+  top: 75%;
+  max-width: 13%;
+  height: auto;
+}
+
+#kiwi {
+  left: 12%;
+  top: 57%;
+  max-width: 10%;
+  height: auto;
+}
+
+.landing {
+  width: 100%;
+  height: auto;
+  padding-left:5%;
+  min-width: 800px;
+}
 
 .home-text {
   margin: auto;
@@ -264,6 +343,7 @@ footer {
   margin: auto;
   width: 50%;
   padding-bottom: 75px;
+  padding-top: 40px;
 }
 
 #work-scroll-text {
@@ -406,6 +486,33 @@ footer {
 .potluck-button:hover {
   background-color: #DA6726;
 }
+
+.okra-button {
+  background-color: #CEDF9F;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+
+.okra-button:hover {
+  background-color: #95C215;
+}
+
+.knot-button {
+  background-color: #EAB7AB;
+  color: white;
+  padding: 5px 3px;
+  border: none;
+  border-radius: 10px;
+  max-width: 150px;
+}
+
+.knot-button:hover {
+  background-color: #FF8E75;
+}
+
 
 #dxd {
   padding-top: 20px;
