--- a/css/knot-style.css
+++ b/css/knot-style.css
@@ -194,7 +194,32 @@ footer {
   padding-top: 25px;
 }
 
+.identity {
+  display: flex;
+  vertical-align: middle;
+}
 
+.fiona-sticker {
+  min-width: 50px;
+  width: 50px;
+  height: 75px;
+}
+
+.info-column .contribution {
+  padding-top: 10px;
+  font-size: 12px;
+  font-weight: 300;
+}
+
+.header {
+  display: flex;
+}
+
+.header .hsub {
+  font-size: 10px;
+  margin-top: 30px;
+  color: #505050;
+}
 .case-study h1 {
   padding-bottom: 10px;
   font-family: Taviraj;
@@ -346,7 +371,10 @@ footer {
   text-align: right;
 }
 
-
+.research {
+  width: 85%;
+  margin-bottom: 40px;
+}
 
 .research img {
   max-width: 75%;
@@ -393,7 +421,6 @@ footer {
   max-height: 700px;
   width: auto;
   padding-bottom: 25px;
-  margin-left: 5px;
 }
 #testing {
   text-align: left;
@@ -459,15 +486,11 @@ footer {
   transform: scale(-1, -1);
   margin-left: 17%;
   margin-top: 30px;
-  color: #505050;
+  color: #B5B5B5;
   font-weight: 600;
 
 }
 
-.proto {
-  margin-left: 40px;
-
-}
 
 .figma {
   margin-bottom: 40px;
@@ -481,9 +504,9 @@ footer {
   padding-bottom: 25px;
 }
 
-.proto p {
-  color: #505050;
-  font-size: 50px;
+.proto .proto-p {
+  color: #B5B5B5;
+  font-size: 40px;
   font-weight: 600;
 }
 
@@ -513,4 +536,143 @@ footer {
   max-width: 700px;
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+
+
+.container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            width: 800px;
+            height: 600px;
+        }
+        /* ----- end of container stylings ----- */
+
+        /* provides padding to main heading */
+.main-heading {
+    padding: 2rem 0 2rem 0;
+}
+
+.content {
+    position: relative;
+}
+
+/* ----- carousel content stylings ----- */
+/* places the carousel content on center of the carousel */
+.carousel-content {
+    position: absolute;
+    /*to center the content horizontally and vertically*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 50;
+}
+.carousel-heading {
+    font-size: 3rem;
+    color: #308d46;
+    margin-bottom: 1rem;
+}
+/*----- end of carousel content stylings ----- */
+
+/* ----- slideshow stylings ----- */
+.slideshow {
+    height: 100%;
+    overflow: hidden; /* to hide slides in x-direction */
+    position: relative;
+}
+/* wrapper which wraps all the slideshow images stylings */
+.slideshow-wrapper {
+    display: flex;
+    /* We give it width as 400% because we are making a
+       4 image carousel. If you want to make for example,
+       5 images carousel, then give width as 500%. */
+    width: 300%;
+    height: 100%;
+    position: relative;
+    /* you can change the animation settings from below */
+    animation: slideshow 20s infinite;
+ }
+/* define width and height for images*/
+.slide {
+    width: 100%;
+    height: 100%;
+}
+.slide-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+/* @keyframes are used to provide animations
+   We make these settings for 4 image carousel.
+   Make modification according to your needs. */
+@keyframes slideshow {
+    0%  { left: 0; }
+    10% { left: 0; }
+    15% { left: 0; }
+    25% { left: 0; }
+    30% { left: 0; }
+    40% { left: -100%; }
+    45% { left: -100%; }
+    55% { left: -100%; }
+    60% { left: -100%; }
+    70% { left: -200%; }
+    75% { left: -200%; }
+    85% { left: -200%; }
+    90% { left: -200%; }
+    95% { left: 0; }
+}
+/* ----- end of slideshow stylings ----- */
+
+/* ----- carousel control buttons stylings ----- */
+.slide-btn {
+    background-color: #red;
+    border-radius: 50%;
+    border: .2rem solid #d38800;
+    width: 1.2rem;
+    height: 1.2rem;
+    outline: none;
+    cursor: pointer;
+    /* stylings for positioning the buttons at
+       the bottom of the carousel */
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 70;
+}
+/* As we provide position as absolute,
+the buttons places one over the other.
+So, we have to place them individually
+at their correct positions. */
+.slide-btn-1 {
+    left: 45%;
+}
+.slide-btn-2 {
+    left: 50%;
+}
+.slide-btn-3 {
+    left: 55%;
+}
+/* When we focus on the particular button,
+the animation stops to that particular image
+to which the button is associated. */
+.slide-btn-1:focus~.slideshow-wrapper {
+    animation: none;
+    left: 0;
+}
+.slide-btn-2:focus~.slideshow-wrapper {
+    animation: none;
+    left: -100%;
+}
+.slide-btn-3:focus~.slideshow-wrapper {
+    animation: none;
+    left: -200%;
+}
+/* when we focus on the button, the background color changes */
+.slide-btn:focus {
+    background-color: #FFCA64;
 }
